--- a/mental_health_project.ipynb
+++ b/mental_health_project.ipynb
@@ -1,1 +1,356 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"authorship_tag":"ABX9TyMIsEUnujaU/N5jlkfYUh+Q"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","source":["pip install streamlit openai"],"metadata":{"collapsed":true,"id":"ftWNeuMn9VqB"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":["mental_health_project/\n","│\n","├── app.py                     # Home / Landing Page\n","│\n","├── pages/                     # All feature pages\n","│   ├── 1_Chatbot.py           # Main Mental Health Chatbot\n","│   ├── 2_Mood_Tracker.py      # Mood Tracker Graph\n","│   ├── 3_Helpline.py          # Emergency & Helpline Page\n","│\n","├── utils/                     # Helper logic (optional but pro)\n","│   └── bot_logic.py           # Mood + response logic\n","│\n","└── .streamlit/\n","    └── secrets.toml           # (Optional) API keys"],"metadata":{"collapsed":true,"id":"8NPJpDGH22Gz"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":["%%writefile mental_health_project/app.py\n","import streamlit as st\n","\n","st.set_page_config(page_title=\"Mental Health Companion\", page_icon=\"🧠\")\n","\n","st.title(\"🧠 Mental Health Companion Chatbot\")\n","\n","st.markdown(\"\"\"\n","### Welcome 👋\n","\n","This project is a **Mental Health Companion Chatbot** built using **Streamlit**.\n","\n","### Features:\n","- 💬 Emotional support chatbot\n","- 😊 Mood detection\n","- 📊 Mood tracking\n","- 🚨 Suicide prevention & helplines\n","\n","⚠️ **Disclaimer:**\n","This application provides emotional support only and is not a replacement for professional medical help.\n","\"\"\")"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"oSlI2MD9thTG","executionInfo":{"status":"ok","timestamp":1767981558041,"user_tz":-330,"elapsed":75,"user":{"displayName":"Deepanshu Kumar Pandit","userId":"12969420133677887635"}},"outputId":"38a15466-7b9a-453a-d390-b391e4e0b200"},"execution_count":58,"outputs":[{"output_type":"stream","name":"stdout","text":["Overwriting mental_health_project/app.py\n"]}]},{"cell_type":"code","source":["%%writefile mental_health_project/utils/bot_logic.py\n","import streamlit as st\n","\n","def bot_reply(msg):\n","    msg = msg.lower()\n","\n","    if \"current_mood\" not in st.session_state:\n","        st.session_state.current_mood = \"\"\n","\n","    # Crisis\n","    if any(w in msg for w in [\"suicide\", \"kill myself\", \"want to die\", \"end my life\"]):\n","        return (\n","            \"🛑 I'm really sorry you're feeling this way.\\n\\n\"\n","            \"📞 **KIRAN (24/7): 1800-599-0019**\\n\"\n","            \"📞 **AASRA: +91-9820466726**\\n\\n\"\n","            \"You are not alone.\"\n","        )\n","\n","    if \"breakup\" in msg:\n","        st.session_state.current_mood = \"breakup\"\n","        return \"💔 Breakups hurt deeply. What part hurts the most?\"\n","\n","    if \"sad\" in msg:\n","        st.session_state.current_mood = \"sad\"\n","        return \"😔 I'm really sorry you're feeling sad.\"\n","\n","    if \"happy\" in msg:\n","        return \"😊 I'm glad you're feeling happy!\"\n","\n","    return \"🤖 I'm here with you. You can share more.\"\n"],"metadata":{"id":"15Zbxeg36Lov"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":["%%writefile mental_health_project/pages/1_Chatbot.py\n","import streamlit as st\n","from utils.bot_logic import bot_reply\n","\n","st.title(\"💬 Mental Health Chatbot\")\n","\n","if \"chat\" not in st.session_state:\n","    st.session_state.chat = []\n","\n","user_input = st.text_input(\"Share your feelings:\")\n","\n","if user_input:\n","    st.session_state.chat.append((\"You\", user_input))\n","    st.session_state.chat.append((\"Bot\", bot_reply(user_input)))\n","\n","for sender, msg in st.session_state.chat:\n","    st.write(f\"**{sender}:** {msg}\")\n",""],"metadata":{"id":"o4w_nszm6Mmf"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":["%%writefile mental_health_project/pages/2_Mood_Tracker.py\n","import streamlit as st\n","import matplotlib.pyplot as plt\n","import datetime\n","\n","st.title(\"📊 Mood Tracker\")\n","\n","if \"mood\" not in st.session_state:\n","    st.session_state.mood = []\n","\n","if st.button(\"Add Sample Mood\"):\n","    st.session_state.mood.append((datetime.datetime.now(), 5))\n","\n","if len(st.session_state.mood) > 1:\n","    times = [m[0] for m in st.session_state.mood]\n","    scores = [m[1] for m in st.session_state.mood]\n","\n","    fig, ax = plt.subplots()\n","    ax.plot(times, scores, marker=\"o\")\n","    ax.set_ylim(0, 10)\n","    st.pyplot(fig)\n",""],"metadata":{"id":"yqJ33l1L6Ot5"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":["%%writefile mental_health_project/pages/3_Helpline.py\n","import streamlit as st\n","\n","st.title(\"🚨 Emergency Helplines\")\n","\n","st.markdown(\"\"\"\n","### If you or someone you know is in crisis:\n","\n","📞 **KIRAN (India – 24/7):** 1800-599-0019\n","📞 **AASRA:** +91-9820466726\n","\n","Please seek professional help immediately.\n","\"\"\")\n"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"R5t_E1zb6SLf","executionInfo":{"status":"ok","timestamp":1767981567197,"user_tz":-330,"elapsed":45,"user":{"displayName":"Deepanshu Kumar Pandit","userId":"12969420133677887635"}},"outputId":"d488f2db-39b8-4417-ca47-5d008f17a49b"},"execution_count":62,"outputs":[{"output_type":"stream","name":"stdout","text":["Overwriting mental_health_project/pages/3_Helpline.py\n"]}]},{"cell_type":"code","source":["from pyngrok import ngrok\n","ngrok.set_auth_token(\"381gOuGdoaxWdpdp17vsE3BhhtR_3UdvgQSX9629VeLaHAq3u\")\n","print(ngrok.connect(8501))\n","!streamlit run mental_health_project/app.py"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"u_jjolPltlVp","outputId":"aed54f79-1ccf-4b20-94c6-e5c58e952b5c"},"execution_count":null,"outputs":[{"output_type":"stream","name":"stdout","text":["NgrokTunnel: \"https://beryl-nonaxiomatic-nervily.ngrok-free.dev\" -> \"http://localhost:8501\"\n","\n","Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.\n","\u001b[0m\n","\u001b[0m\n","\u001b[34m\u001b[1m  You can now view your Streamlit app in your browser.\u001b[0m\n","\u001b[0m\n","\u001b[34m  Local URL: \u001b[0m\u001b[1mhttp://localhost:8501\u001b[0m\n","\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n","\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://34.125.235.187:8501\u001b[0m\n","\u001b[0m\n"]}]}]}
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Deepanshu779/mental-health-companion-chatbot/blob/main/mental_health_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "ftWNeuMn9VqB"
+      },
+      "outputs": [],
+      "source": [
+        "pip install streamlit openai"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "8NPJpDGH22Gz"
+      },
+      "outputs": [],
+      "source": [
+        "mental_health_project/\n",
+        "│\n",
+        "├── app.py                     # Home / Landing Page\n",
+        "│\n",
+        "├── pages/                     # All feature pages\n",
+        "│   ├── 1_Chatbot.py           # Main Mental Health Chatbot\n",
+        "│   ├── 2_Mood_Tracker.py      # Mood Tracker Graph\n",
+        "│   ├── 3_Helpline.py          # Emergency & Helpline Page\n",
+        "│\n",
+        "├── utils/                     # Helper logic (optional but pro)\n",
+        "│   └── bot_logic.py           # Mood + response logic\n",
+        "│\n",
+        "└── .streamlit/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir -p mental_health_project\n",
+        "!mkdir -p mental_health_project/pages\n",
+        "!mkdir -p mental_health_project/utils\n",
+        "!mkdir -p mental_health_project/.streamlit"
+      ],
+      "metadata": {
+        "id": "pqgnbu4l78kc"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oSlI2MD9thTG",
+        "outputId": "34a8dacd-0390-47b1-ab26-1b7cfc6f873a"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting mental_health_project/app.py\n"
+          ]
+        }
+      ],
+      "source": [
+        "%%writefile mental_health_project/app.py\n",
+        "import streamlit as st\n",
+        "\n",
+        "st.set_page_config(page_title=\"Mental Health Companion\", page_icon=\"🧠\")\n",
+        "\n",
+        "st.title(\"🧠 Mental Health Companion Chatbot\")\n",
+        "\n",
+        "st.markdown(\"\"\"\n",
+        "### Welcome 👋\n",
+        "\n",
+        "This project is a **Mental Health Companion Chatbot** built using **Streamlit**.\n",
+        "\n",
+        "### Features:\n",
+        "- 💬 Emotional support chatbot\n",
+        "- 😊 Mood detection\n",
+        "- 📊 Mood tracking\n",
+        "- 🚨 Suicide prevention & helplines\n",
+        "\n",
+        "⚠️ **Disclaimer:**\n",
+        "This application provides emotional support only and is not a replacement for professional medical help.\n",
+        "\"\"\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "15Zbxeg36Lov",
+        "outputId": "4aa10d12-48e8-417f-d22a-84385939e944"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting mental_health_project/utils/bot_logic.py\n"
+          ]
+        }
+      ],
+      "source": [
+        "%%writefile mental_health_project/utils/bot_logic.py\n",
+        "import streamlit as st\n",
+        "\n",
+        "def bot_reply(msg):\n",
+        "    msg = msg.lower()\n",
+        "\n",
+        "    if \"current_mood\" not in st.session_state:\n",
+        "        st.session_state.current_mood = \"\"\n",
+        "\n",
+        "    # Crisis\n",
+        "    if any(w in msg for w in [\"suicide\", \"kill myself\", \"want to die\", \"end my life\"]):\n",
+        "        return (\n",
+        "            \"🛑 I'm really sorry you're feeling this way.\\n\\n\"\n",
+        "            \"📞 **KIRAN (24/7): 1800-599-0019**\\n\"\n",
+        "            \"📞 **AASRA: +91-9820466726**\\n\\n\"\n",
+        "            \"You are not alone.\"\n",
+        "        )\n",
+        "\n",
+        "    if \"breakup\" in msg:\n",
+        "        st.session_state.current_mood = \"breakup\"\n",
+        "        return \"💔 Breakups hurt deeply. What part hurts the most?\"\n",
+        "\n",
+        "    if \"sad\" in msg:\n",
+        "        st.session_state.current_mood = \"sad\"\n",
+        "        return \"😔 I'm really sorry you're feeling sad.\"\n",
+        "\n",
+        "    if \"happy\" in msg:\n",
+        "        return \"😊 I'm glad you're feeling happy!\"\n",
+        "\n",
+        "    return \"🤖 I'm here with you. You can share more.\"\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o4w_nszm6Mmf",
+        "outputId": "9531757a-f292-488b-fd14-9a7b2aae86bd"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting mental_health_project/pages/1_Chatbot.py\n"
+          ]
+        }
+      ],
+      "source": [
+        "%%writefile mental_health_project/pages/1_Chatbot.py\n",
+        "import streamlit as st\n",
+        "from utils.bot_logic import bot_reply\n",
+        "\n",
+        "st.title(\"💬 Mental Health Chatbot\")\n",
+        "\n",
+        "if \"chat\" not in st.session_state:\n",
+        "    st.session_state.chat = []\n",
+        "\n",
+        "user_input = st.text_input(\"Share your feelings:\")\n",
+        "\n",
+        "if user_input:\n",
+        "    st.session_state.chat.append((\"You\", user_input))\n",
+        "    st.session_state.chat.append((\"Bot\", bot_reply(user_input)))\n",
+        "\n",
+        "for sender, msg in st.session_state.chat:\n",
+        "    st.write(f\"**{sender}:** {msg}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yqJ33l1L6Ot5",
+        "outputId": "e21f2d6d-9633-4870-9ecc-4c04fd58a4cb"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting mental_health_project/pages/2_Mood_Tracker.py\n"
+          ]
+        }
+      ],
+      "source": [
+        "%%writefile mental_health_project/pages/2_Mood_Tracker.py\n",
+        "import streamlit as st\n",
+        "import matplotlib.pyplot as plt\n",
+        "import datetime\n",
+        "\n",
+        "st.title(\"📊 Mood Tracker\")\n",
+        "\n",
+        "if \"mood\" not in st.session_state:\n",
+        "    st.session_state.mood = []\n",
+        "\n",
+        "if st.button(\"Add Sample Mood\"):\n",
+        "    st.session_state.mood.append((datetime.datetime.now(), 5))\n",
+        "\n",
+        "if len(st.session_state.mood) > 1:\n",
+        "    times = [m[0] for m in st.session_state.mood]\n",
+        "    scores = [m[1] for m in st.session_state.mood]\n",
+        "\n",
+        "    fig, ax = plt.subplots()\n",
+        "    ax.plot(times, scores, marker=\"o\")\n",
+        "    ax.set_ylim(0, 10)\n",
+        "    st.pyplot(fig)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R5t_E1zb6SLf",
+        "outputId": "93713a51-47f7-4c8f-e28d-5e2048cb02de"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting mental_health_project/pages/3_Helpline.py\n"
+          ]
+        }
+      ],
+      "source": [
+        "%%writefile mental_health_project/pages/3_Helpline.py\n",
+        "import streamlit as st\n",
+        "\n",
+        "st.title(\"🚨 Emergency Helplines\")\n",
+        "\n",
+        "st.markdown(\"\"\"\n",
+        "### If you or someone you know is in crisis:\n",
+        "\n",
+        "📞 **KIRAN (India – 24/7):** 1800-599-0019\n",
+        "📞 **AASRA:** +91-9820466726\n",
+        "\n",
+        "Please seek professional help immediately.\n",
+        "\"\"\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pyngrok"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_pIT6NIR8FGe",
+        "outputId": "5732f449-a956-405b-fd7e-8d88bea1866a"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pyngrok\n",
+            "  Downloading pyngrok-7.5.0-py3-none-any.whl.metadata (8.1 kB)\n",
+            "Requirement already satisfied: PyYAML>=5.1 in /usr/local/lib/python3.12/dist-packages (from pyngrok) (6.0.3)\n",
+            "Downloading pyngrok-7.5.0-py3-none-any.whl (24 kB)\n",
+            "Installing collected packages: pyngrok\n",
+            "Successfully installed pyngrok-7.5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u_jjolPltlVp",
+        "outputId": "4b246964-7404-4c36-f909-d6601b89846c"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "NgrokTunnel: \"https://beryl-nonaxiomatic-nervily.ngrok-free.dev\" -> \"http://localhost:8501\"\n",
+            "\n",
+            "Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.\n",
+            "\u001b[0m\n",
+            "\u001b[0m\n",
+            "\u001b[34m\u001b[1m  You can now view your Streamlit app in your browser.\u001b[0m\n",
+            "\u001b[0m\n",
+            "\u001b[34m  Local URL: \u001b[0m\u001b[1mhttp://localhost:8501\u001b[0m\n",
+            "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n",
+            "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://34.80.21.13:8501\u001b[0m\n",
+            "\u001b[0m\n"
+          ]
+        }
+      ],
+      "source": [
+        "from pyngrok import ngrok\n",
+        "ngrok.set_auth_token(\"381gOuGdoaxWdpdp17vsE3BhhtR_3UdvgQSX9629VeLaHAq3u\")\n",
+        "print(ngrok.connect(8501))\n",
+        "!streamlit run mental_health_project/app.py"
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyM2zVZxu083kq9CHSuu8vdj",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
